--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "Proyecto-Final-Coder",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "4.17.2",
-    "express-handlebars": "6.0.2",
     "socket.io": "4.4.1"
   }
 }
