--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.17.2",
+    "firebase-admin": "10.0.2",
     "mongoose": "6.2.2",
     "socket.io": "4.4.1",
     "uuid": "8.3.2"
