--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "Proyecto-Final-Coder",
+  "name": "proyecto_final_coder",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "node .",
-    "start-dev": "nodemon -r dotenv/config ."
+    "dev": "nodemon ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.17.2",
-    "firebase-admin": "10.0.2",
-    "mongoose": "6.2.2",
-    "socket.io": "4.4.1",
-    "uuid": "8.3.2"
+    "bcrypt": "5.0.1",
+    "compression": "1.7.4",
+    "connect-mongo": "4.6.0",
+    "ejs": "3.1.6",
+    "express": "^4.17.3",
+    "express-session": "1.17.2",
+    "moment": "2.29.1",
+    "mongoose": "^6.2.4",
+    "normalizr": "3.6.2",
+    "passport": "0.5.2",
+    "passport-local": "1.0.0",
+    "socket.io": "^4.4.1",
+    "winston": "3.7.2"
   },
   "devDependencies": {
     "dotenv": "16.0.0"
