--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "bcrypt": "5.0.1",
     "compression": "1.7.4",
     "connect-mongo": "4.6.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "3.1.6",
     "express": "^4.17.3",
     "express-session": "1.17.2",
     "moment": "2.29.1",
     "mongoose": "^6.2.4",
+    "nodemailer": "6.7.3",
     "normalizr": "3.6.2",
     "passport": "0.5.2",
     "passport-local": "1.0.0",
     "socket.io": "^4.4.1",
+    "twilio": "3.76.1",
     "winston": "3.7.2"
   },
   "devDependencies": {
