--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "1.17.2",
     "moment": "2.29.1",
     "mongoose": "^6.2.4",
+    "multer": "1.4.4",
     "nodemailer": "6.7.3",
     "normalizr": "3.6.2",
     "passport": "0.5.2",
