--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "proyecto_final_coder",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node .",
-    "dev": "nodemon ."
+    "dev": "pm2 start . --name=Server --watch"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +26,6 @@
     "passport": "0.5.2",
     "passport-local": "1.0.0",
     "socket.io": "^4.4.1",
-    "twilio": "3.76.1",
     "winston": "3.7.2"
   },
   "devDependencies": {
