--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "nodemailer": "6.7.3",
     "normalizr": "3.6.2",
     "passport": "0.5.2",
+    "passport-jwt": "^4.0.0",
     "passport-local": "1.0.0",
     "socket.io": "^4.4.1",
+    "uuid": "^8.3.2",
     "winston": "3.7.2"
   },
   "devDependencies": {
