Entrega Final - Config 1, Routers 1, Controllers 1, Daos 1 & Schemas 2

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "proyecto_final_coder",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "node .",
     "dev": "pm2 start . --name=Server --watch"
